# qiita-team-alfred-workflow

./: Cargo.toml  README.md
resources/: info.plist
src/: main.rs
